# lichess_bot_games

./: CMakeLists.txt
src/: main.cpp  parse.cpp  parse.hpp  processpgn.cpp  processpgn.hpp
